--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <div
                 class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#download">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#home">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="sign-in.html">Sign-in</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">New Appointment</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="appointment.html">New Appointment</a></li>
                 </ul>
         </div>
         </div>
     </nav>
-    <header class="masthead" style="background:url('assets/img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);height:100%;">
+    <header class="masthead" id="home" style="background:url('assets/img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);height:100%;">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-7 my-auto">
