--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Tondo Hospital</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <!-- Sweet Alert -->
+    <link rel="stylesheet" href="assets/plugins/sweetalert2/sweetalert2.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -138,6 +140,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="assets/plugins/sweetalert2/sweetalert2.all.min.js"></script>
+    <script src="assets/plugins/sweetalert2/sweetalert2.js"></script>
     <script src="assets/js/new-age.js"></script>
 </body>
 
