--- a/admin/appointment-history.html
+++ b/admin/appointment-history.html
@@ -7,29 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="../assets/img/TMClogo.png" type="image/png">
 
-    <title>Doctor</title>
+    <title>Admin</title>
 
     <!-- vendor css -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.20/summernote-bs4.min.css" integrity="sha512-ngQ4IGzHQ3s/Hh8kMyG4FC74wzitukRMIcTOoKT3EyzFZCILOPF0twiXOQn75eDINUfKBYmzYn2AA8DkAk8veQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.min.css" integrity="sha512-QfDd74mlg8afgSqm3Vq2Q65e9b3xMhJB4GZ9OcHDVy1hZ6pqBJPWWnMsKDXM7NINoKqJANNGBuVRIpIJ5dogfA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" integrity="sha512-JApjWRnfonFeGBY7t4yq8SWr1A6xVYEJgO/UMIYONxaR3C9GETKUg0LharbJncEzJF5Nmiv+Pr5QNulr81LjGQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css" integrity="sha512-3JRrEUwaCkFUBLK1N8HehwQgu8e23jTH4np5NHOmQOobuC4ROQxFwFgBLTnhcnQRMs84muMh0PnnwXlPq5MGjg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="../assets/plugins/datatables.net-dt/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="../assets/plugins/datatables.net-responsive-dt/css/responsive.dataTables.min.css">
     <link rel="stylesheet" href="../assets/plugins/sweetalert2/sweetalert2.min.css" />
     <link rel="stylesheet" href="../assets/compo/css/custom.css">
-    <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.2.5/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css" crossorigin="anonymous">
-    
   </head>
 
   <body>
 
     <!-- ########## START: LEFT PANEL ########## -->
-    <div class="br-logo"><a href=""><span>[</span><i>Doctor</i><span>]</span></a></div>
+    <div class="br-logo"><a href=""><span>[</span><i>Admin</i><span>]</span></a></div>
     <div class="br-sideleft sideleft-scrollbar">
-      <label class="sidebar-label pd-x-10 mg-t-20 op-3">Patient Menu</label>
+      <label class="sidebar-label pd-x-10 mg-t-20 op-3">Admin Menu</label>
       <ul class="br-sideleft-menu">
         <li class="br-menu-item">
           <a href="index.html" class="br-menu-link">
@@ -43,16 +39,20 @@
             <span class="menu-item-label">Appointment</span>
           </a><!-- br-menu-link -->
           <ul class="br-menu-sub">
-            <li class="sub-item"><a href="available-appointments.html" class="sub-link">Available Appointments</a></li>
-            <li class="sub-item"><a href="my-appointments.html" class="sub-link active"> My Appointments</a></li>
-            <li class="sub-item"><a href="appointment-history.html" class="sub-link">Appointments History</a></li>
+            <li class="sub-item"><a href="available-appointments.html" class="sub-link ">Available Appointments</a></li>
+            <li class="sub-item"><a href="my-appointments.html" class="sub-link "> My Appointments</a></li>
+            <li class="sub-item"><a href="appointment-history.html" class="sub-link active">Appointments History</a></li>
           </ul>
         </li><!-- br-menu-item -->
         <li class="br-menu-item">
-          <a href="#" class="br-menu-link">
-            <i class="menu-item-icon icon ion-ios-email-outline tx-24"></i>
-            <span class="menu-item-label">Results</span>
+          <a href="#" class="br-menu-link with-sub">
+            <i class="menu-item-icon icon ion-ios-filing-outline tx-24"></i>
+            <span class="menu-item-label">Staff Management</span>
           </a><!-- br-menu-link -->
+          <ul class="br-menu-sub">
+            <li class="sub-item"><a href="staff.html" class="sub-link">Staff</a></li>
+            <li class="sub-item"><a href="doctor.html" class="sub-link">Doctors</a></li>
+          </ul>
         </li><!-- br-menu-item -->
       </ul><!-- br-sideleft-menu -->
     </div><!-- br-sideleft -->
@@ -95,40 +95,98 @@
     <div class="br-mainpanel">
       <div class="br-pageheader">
         <nav class="breadcrumb pd-0 mg-0 tx-12">
-          <a class="breadcrumb-item" href="index.html">Doctor</a>
+          <a class="breadcrumb-item" href="index.html">Admin</a>
           <span class="breadcrumb-item active">Appointment</span>
-          <a class="breadcrumb-item" href="my-appointments.html">My Appointment</a>
-          <span class="breadcrumb-item active">Consultation</span>
-          <span class="breadcrumb-item active" id="patient_name"></span>
+          <span class="breadcrumb-item active">My Appointment</span>
         </nav>
       </div><!-- br-pageheader -->
       <div class="br-pagetitle">
         <i class="icon icon ion-person"></i>
         <div>
-          <h4>Consultation</h4>
-          <p class="mg-b-0" id="patient_name_2"></p>
+          <h4>My Appointments</h4>
+          <p class="mg-b-0">Your Appointment Requests</p>
         </div>
       </div><!-- d-flex -->
       <div class="br-pagebody">
         <div class="br-section-wrapper">
-          <form id="diagnosisForm">
-            <h4>Notes</h4>
-            <div id="consultationNotes"></div>
-            <h4 class="mt-5">Diagnosis and Result Files</h4>
-            <div class="input-group mb-3">
-              <div class="asd">
-                <input type="file" class="asd" id="uploadRecord" aria-describedby="inputGroupFileAddon01" multiple>
-              </div>
-            </div>
-            <div class="row mt-5">
-              <div class="col-4">
-                <button type="submit" class="btn btn-success btn-block">Complete Consultation</button>
-              </div>
-            </div>
-          </form>
+          <div class="table-wrapper">
+            <table id="myAppointmentTable" class="table display responsive nowrap">
+              <thead>
+                <tr>
+                  <th class="wd-10p">Patient's Name</th>
+                  <th class="wd-10p">Appoint Date</th>
+                  <th class="wd-10p">Consult Date</th>
+                  <th class="wd-10p">Status</th>
+                  <th class="wd-25p">Actions</th>
+                </tr>
+              </thead>
+              <tbody id="myAppointmentView"></tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
+    <div id="modal_appointment" class="modal fade">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content bd-0 tx-14">
+          <div class="modal-header pd-y-20 pd-x-25">
+            <h6 class="tx-14 mg-b-0 tx-uppercase tx-inverse tx-bold">View Appointment Record</h6>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body pd-25">
+            <h4 class="lh-3 mg-b-20 tx-inverse">Appointment for <span id="patient_salutation"></span> <span id="patient_fullname"></span> on <span id="appointment_date"></span></h4>
+            <p class="mg-b-5" id="reasonForVisit"></p>
+            <hr>
+            <h4 class="lh-3 mg-b-20 tx-inverse">Contacts</h4>
+            <p id="contact"></p>
+            <p id="emergencyContact"></p>
+            <hr>
+            <h4 class="lh-3 mg-b-20 tx-inverse">Records</h4>
+            <div id="record_notes"></div>
+            <hr>
+            <h4 class="lh-3 mg-b-20 tx-inverse"> Files</h4>
+            <div id="file"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div><!-- modal-dialog -->
+    </div><!-- modal -->
+    <div id="modal_new_appointment" class="modal fade">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content bd-0 tx-14">
+          <div class="modal-header pd-y-20 pd-x-25">
+            <h6 class="tx-14 mg-b-0 tx-uppercase tx-inverse tx-bold">Set New Appointment</h6>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body pd-25">
+            <h4 class="lh-3 mg-b-20 tx-inverse">New Appointment for <span id="patient_salutation_2"></span> <span id="patient_fullname_2"></span></h4>
+            <div class="form-group">
+              <label for="reason_for_visit">Reason For Visit*</label>
+              <textarea class="form-control" row="5" id="reason_for_visit"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="appoinement_time">Appoinment Date & Time</label>
+              <div class="input-group date" id="appointment_timestamp" data-target-input="nearest">
+                <input type="text" id="appointment" class="form-control datetimepicker-input" data-target="#appointment_timestamp"/>
+                <div class="input-group-append" data-target="#appointment_timestamp" data-toggle="datetimepicker">
+                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="btn_new_appointment" class="btn btn-success tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium appoint-accept">Set Appointment</button>
+            <button type="button" class="btn btn-secondary tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div><!-- modal-dialog -->
+    </div><!-- modal -->
     <!-- ########## END: MAIN PANEL ########## -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -137,9 +195,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/1.5.5/perfect-scrollbar.min.js" integrity="sha512-X41/A5OSxoi5uqtS6Krhqz8QyyD8E/ZbN7B4IaBSgqPLRbWVuXJXr9UwOujstj71SoVxh5vxgy7kmtd17xrJRw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peity/3.3.0/jquery.peity.min.js" integrity="sha512-L5mXjK4YbZPFEuunivJM+SKJG5qxqElc8RlaLDRd1Z5TtDACmugfzIRyFnYSGD4jPYoEMJbXhUJFZsBWDV8yLQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.20/summernote-bs4.min.js" integrity="sha512-ZESy0bnJYbtgTNGlAD+C2hIZCt4jKGF41T5jZnIXy4oP8CQqcrBGWyxNP16z70z/5Xy6TS/nUZ026WmvOcjNIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.2.5/js/plugins/piexif.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.2.5/js/fileinput.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js" integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA==" crossorigin="anonymous"></script>
     <script src="../assets/plugins/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="../assets/plugins/datatables.net-dt/js/dataTables.dataTables.min.js"></script>
     <script src="../assets/plugins/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
@@ -148,6 +204,6 @@
     <script src="../assets/plugins/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="../assets/plugins/sweetalert2/sweetalert2.js"></script>
     <script src="../assets/compo/js/custom.js"></script>
-    <script src="../assets/js/doctor.js"></script>
+    <script src="../assets/js/admin.js"></script>
   </body>
 </html>
