Implemented Web Scapping

--- a/admin/doctor.html
+++ b/admin/doctor.html
@@ -37,6 +37,17 @@
           </a><!-- br-menu-link -->
         </li><!-- br-menu-item -->
         <li class="br-menu-item">
+          <a href="#" class="br-menu-link with-sub show-sub active">
+            <i class="menu-item-icon icon ion-ios-bookmarks-outline tx-24"></i>
+            <span class="menu-item-label">Appointment</span>
+          </a><!-- br-menu-link -->
+          <ul class="br-menu-sub">
+            <li class="sub-item"><a href="available-appointments.html" class="sub-link active">Available Appointments</a></li>
+            <li class="sub-item"><a href="my-appointments.html" class="sub-link"> My Appointments</a></li>
+            <li class="sub-item"><a href="appointment-history.html" class="sub-link">Appointments History</a></li>
+          </ul>
+        </li><!-- br-menu-item -->
+        <li class="br-menu-item">
           <a href="#" class="br-menu-link show-sub with-sub active">
             <i class="menu-item-icon icon ion-ios-filing-outline tx-24"></i>
             <span class="menu-item-label">Staff Management</span>
