--- a/reception/index.html
+++ b/reception/index.html
@@ -41,12 +41,6 @@
             <li class="sub-item"><a href="archived-appointment.html" class="sub-link">Archived Appointment</a></li>
           </ul>
         </li><!-- br-menu-item -->
-        <li class="br-menu-item">
-          <a href="#" class="br-menu-link">
-            <i class="menu-item-icon icon ion-ios-email-outline tx-24"></i>
-            <span class="menu-item-label">Results</span>
-          </a><!-- br-menu-link -->
-        </li><!-- br-menu-item -->
       </ul><!-- br-sideleft-menu -->
     </div><!-- br-sideleft -->
     <!-- ########## END: LEFT PANEL ########## -->
@@ -86,7 +80,16 @@
 
     <!-- ########## START: MAIN PANEL ########## -->
     <div class="br-mainpanel">
-
+      <div class="br-pagetitle">
+        <i class="icon icon ion-ios-photos-outline"></i>
+        <div>
+          <h4>Articles Today</h4>
+          <p class="mg-b-0">Articles About health information in Philippines</p>
+        </div>
+      </div><!-- d-flex -->
+      <div class="br-pagebody pd-x-20 pd-sm-x-30 mx-wd-1350" id="article">
+        
+      </div>
     </div>
     <!-- ########## END: MAIN PANEL ########## -->
 
