--- a/admin/index.html
+++ b/admin/index.html
@@ -91,7 +91,16 @@
 
     <!-- ########## START: MAIN PANEL ########## -->
     <div class="br-mainpanel">
-
+      <div class="br-pagetitle">
+        <i class="icon icon ion-ios-photos-outline"></i>
+        <div>
+          <h4>Articles Today</h4>
+          <p class="mg-b-0">Articles About health information in Philippines</p>
+        </div>
+      </div><!-- d-flex -->
+      <div class="br-pagebody pd-x-20 pd-sm-x-30 mx-wd-1350" id="article">
+        
+      </div>
     </div>
     <!-- ########## END: MAIN PANEL ########## -->
 
