Implemented Edit Profile

--- a/admin/appointment-history.html
+++ b/admin/appointment-history.html
@@ -81,7 +81,7 @@
               </div>
               <hr>
               <ul class="list-unstyled user-profile-nav">
-                <li><a href=""><i class="icon ion-ios-person"></i> Edit Profile</a></li>
+                <li><a href="#" id="editProfile"><i class="icon ion-ios-person"></i> Edit Profile</a></li>
                 <li><a href="../api/accounts/logout.php"><i class="icon ion-power"></i> Sign Out</a></li>
               </ul>
             </div><!-- dropdown-menu -->
